# HomifyHub

./: .env.local  .env.production  .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  script.py
homifyhub/: asgi.py  settings.py  urls.py  wsgi.py
homifyhub/blogs/: admin.py  models.py  urls.py  views.py
homifyhub/carts/: admin.py  forms.py  models.py  urls.py  views.py
homifyhub/core/: apps.py  context_processors.py  forms.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py
homifyhub/core/templates/: dashboard.html  home.html
homifyhub/homifyhub/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
homifyhub/orders/: admin.py  forms.py  models.py  urls.py  views.py
homifyhub/payments/: admin.py  forms.py  models.py  urls.py  views.py
homifyhub/products/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
homifyhub/site_settings/: admin.py  forms.py  models.py  urls.py  views.py
homifyhub/static/scripts/: index.js
homifyhub/static/styles/: index.css
homifyhub/templates/: 404.html  500.html  about.html  base.html  contact.html  forgot_password.html  login.html  maintenance.html  reset_password.html  signup.html
homifyhub/templates/core/: careers.html  help_center.html  home.html  our_story.html  privacy_policy.html  returns.html  (+2 more)
homifyhub/users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
products/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
products/templates/: add_product.html  base.html  confirm_delete.html  edit_product.html  product_list.html
(+43 files in other folders)
