[project]
name = "homifyhub"
version = "1.0.0"
description = ""
authors = [
    {name = "Jubyer Ahmed Shezan",email = "84038649+jashezan@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.5,<6.0.0)"
]

[tool.poetry.scripts]
start = "script:start_server"
migrate-db = "script:migrate_db"
superuser = "script:create_super_user"
startapp = "script:create_app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
